--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,7 +10,7 @@
         production: "製作中"
         shipping_preparation: "発送準備中"
         sent: "発送済み"
-    OrderDetail:
+    order_detail:
       making_method:
         cannot_be_manufactured: "制作不可"
         waiting_for_production: "製作待ち"
